src/styles/global.css
@import 'rehype-callouts/theme/github';

:root {
  color-scheme: dark light;
  font-family: sans-serif;
}

:root[data-color-scheme='dark'] {
  color-scheme: dark;

  --clr-rosewater: #f4dbd6;
  --clr-flamingo: #f0c6c6;
  --clr-pink: #f5bde6;
  --clr-mauve: #c6a0f6;
  --clr-red: #ed8796;
  --clr-maroon: #ee99a0;
  --clr-peach: #f5a97f;
  --clr-yellow: #eed49f;
  --clr-green: #a6da95;
  --clr-teal: #8bd5ca;
  --clr-sky: #91d7e3;
  --clr-sapphire: #7dc4e4;
  --clr-blue: #8aadf4;
  --clr-lavendar: #b7bdf8;

  --clr-primary: var(--clr-blue);
  --clr-secondary: var(--clr-lavendar);
  --clr-tertiary: var(--clr-mauve);
  --clr-error: var(--clr-red);
  --clr-warning: var(--clr-yellow);

  --clr-text: rgb(202, 211, 245);
  --clr-subtext-1: rgb(184, 192, 224);
  --clr-subtext-0: rgb(165, 173, 203);

  --clr-overlay-2: rgb(147, 154, 183);
  --clr-overlay-1: rgb(128, 135, 162);
  --clr-overlay-0: rgb(110, 115, 141);

  --clr-surface-2: rgb(91, 96, 120);
  --clr-surface-1: rgb(73, 77, 100);
  --clr-surface-0: rgb(54, 58, 79);

  --clr-base: rgb(36, 39, 58);
  --clr-mantle: rgb(30, 32, 48);
  --clr-crust: rgb(24, 25, 38);

  --clr-text-trans-60: rgba(202, 211, 245, 0.6);
  --clr-subtext-1-trans-60: rgba(184, 192, 224, 0.6);
  --clr-subtext-0-trans-60: rgba(165, 173, 203, 0.6);

  --clr-overlay-2-trans-60: rgba(147, 154, 183, 0.6);
  --clr-overlay-1-trans-60: rgba(128, 135, 162, 0.6);
  --clr-overlay-0-trans-60: rgba(110, 115, 141, 0.6);

  --clr-surface-2-trans-60: rgba(91, 96, 120, 0.6);
  --clr-surface-1-trans-60: rgba(73, 77, 100, 0.6);
  --clr-surface-0-trans-60: rgba(54, 58, 79, 0.6);

  --clr-base-trans-60: rgba(36, 39, 58, 0.6);
  --clr-mantle-trans-60: rgba(30, 32, 48, 0.6);
  --clr-crust-trans-60: rgba(24, 25, 38, 0.6);

  --clr-gradient-bg: radial-gradient(
    circle,
    var(--clr-base) 0%,
    var(--clr-mantle) 50%,
    var(--clr-crust) 100%
  );

  --bg-pattern-opacity: 1;
}

:root[data-color-scheme='light'] {
  color-scheme: light;

  --clr-rosewater: #dc8a78;
  --clr-flamingo: #dd7878;
  --clr-pink: #ea76cb;
  --clr-mauve: #8839ef;
  --clr-red: #d20f39;
  --clr-maroon: #e64553;
  --clr-peach: #fe640b;
  --clr-yellow: #df8e1d;
  --clr-green: #40a02b;
  --clr-teal: #179299;
  --clr-sky: #04a5e5;
  --clr-sapphire: #209fb5;
  --clr-blue: #1e66f5;
  --clr-lavendar: #7287fd;

  --clr-primary: var(--clr-blue);
  --clr-secondary: var(--clr-lavendar);
  --clr-tertiary: var(--clr-mauve);
  --clr-error: var(--clr-red);
  --clr-warning: var(--clr-yellow);

  --clr-text: rgb(76, 79, 105);
  --clr-subtext-1: rgb(92, 95, 119);
  --clr-subtext-0: rgb(108, 111, 133);

  --clr-overlay-2: rgb(124, 127, 147);
  --clr-overlay-1: rgb(140, 143, 161);
  --clr-overlay-0: rgb(156, 160, 176);

  --clr-surface-2: rgb(172, 176, 190);
  --clr-surface-1: rgb(188, 192, 204);
  --clr-surface-0: rgb(204, 208, 218);

  --clr-base: rgb(239, 241, 245);
  --clr-mantle: rgb(230, 233, 239);
  --clr-crust: rgb(220, 224, 232);

  --clr-text-trans-60: rgba(76, 79, 105, 0.6);
  --clr-subtext-1-trans-60: rgba(92, 95, 119, 0.6);
  --clr-subtext-0-trans-60: rgba(108, 111, 133, 0.6);

  --clr-overlay-2-trans-60: rgba(124, 127, 147, 0.6);
  --clr-overlay-1-trans-60: rgba(140, 143, 161, 0.6);
  --clr-overlay-0-trans-60: rgba(156, 160, 176, 0.6);

  --clr-surface-2-trans-60: rgba(172, 176, 190, 0.6);
  --clr-surface-1-trans-60: rgba(188, 192, 204, 0.6);
  --clr-surface-0-trans-60: rgba(204, 208, 218, 0.6);

  --clr-base-trans-60: rgba(239, 241, 245, 0.6);
  --clr-mantle-trans-60: rgba(230, 233, 239, 0.6);
  --clr-crust-trans-60: rgba(220, 224, 232, 0.6);

  --clr-gradient-bg: radial-gradient(
    circle,
    var(--clr-base) 0%,
    var(--clr-mantle) 50%,
    var(--clr-crust) 100%
  );

  --bg-pattern-opacity: 0.4;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  min-height: 100dvh;

  padding: 0;
  padding-top: 6rem;
  margin: 0;

  font-family: 'IBM Plex Serif', serif;
  color: var(--clr-text);

  overflow-y: auto;
  overflow-x: hidden;
}

body::before {
  content: '';

  position: fixed;
  top: 0;
  left: 0;

  width: 100vw;
  min-height: 100vh;

  background: var(--clr-base);
  background: var(--clr-gradient-bg);
  background-attachment: fixed;

  mix-blend-mode: multiply;

  z-index: -1;
}

body::after {
  content: '';

  position: fixed;
  top: 0;
  left: 0;

  width: 100vw;
  min-height: 100vh;

  background-image: url('/bg_pattern.svg');
  background-attachment: fixed;

  opacity: var(--bg-pattern-opacity);

  z-index: -2;
}

body[data-scroll-active='false'] {
  overflow-y: hidden;
}

body[data-scroll-active='false'][data-page-height-scroll='true'] > main {
  margin-right: 1rem;
}

a,
p,
button {
  color: var(--clr-text);
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  width: 100%;

  margin-block: auto;
}

p {
  margin-block: 0.8rem;
}

hr {
  border: none;

  width: 100%;
  height: 1px;

  background-color: var(--clr-text);
}

ul,
ol {
  display: flex;
  flex-direction: column;

  gap: 0.6rem;

  padding: 0;
  padding-left: 1rem;
}

@media screen and (min-width: 768px) {
  main {
    padding-top: 8rem;
  }
}

blockquote {
  isolation: isolate;
  position: relative;

  background-color: var(--clr-mantle);

  padding-block: 1rem;
  padding-inline: 2rem;

  margin-inline: 0;
  margin-block: 1rem;

  overflow: hidden;
}

blockquote::before {
  content: open-quote;

  position: absolute;
  top: -3.6rem;
  left: -0.2rem;

  color: var(--clr-overlay-0);
  font-size: 16rem;

  opacity: 0.15;

  z-index: -1;
}

blockquote::after {
  content: no-close-quote;
}

blockquote > blockquote {
  background-color: var(--clr-crust);
}

blockquote > blockquote::before {
  content: '';
  top: -2rem;
}

.contains-task-list {
  list-style-type: none;
}

.max-width {
  max-width: 1024px;
  margin-inline: auto;
}

#drawer-wrapper {
  content: '';
  position: absolute;
  top: 0;
  left: 0;

  width: 100vw;
  height: 100vh;

  overflow: hidden;

  pointer-events: none;
}

.visually-hidden {
  position: absolute !important;
  top: -9999px;
  left: -9999px;

  height: 1px;
  width: 1px;

  overflow: hidden;

  clip: rect(1px 1px 1px 1px);
  clip: rect(1px, 1px, 1px, 1px, 1px);
}

html.dark .astro-code,
html.dark .astro-code span {
  color: var(--shiki-dark);

  /* Optional, if you also want font styles */
  font-style: var(--shiki-dark-font-style);
  font-weight: var(--shiki-dark-font-weight);
  text-decoration: var(--shiki-dark-text-decoration);
}

html.light .astro-code,
html.light .astro-code span {
  color: var(--shiki-light);

  /* Optional, if you also want font styles */
  font-style: var(--shiki-light-font-style);
  font-weight: var(--shiki-light-font-weight);
  text-decoration: var(--shiki-light-text-decoration);
}

.astro-code {
  padding-inline: 0.5rem;
  padding-block: 0.5rem;
  background-color: var(--clr-mantle);
}

.astro-code > code {
  counter-reset: step;
  counter-increment: step calc(var(--code-line-start, 1) - 1);
}

.astro-code > code .line::before {
  content: counter(step);
  counter-increment: step;

  width: 1.5rem;

  padding-right: 0.75rem;
  padding-block: 0.2rem;

  margin-right: 0.75rem;

  display: inline-block;

  text-align: right;
  color: var(--clr-surface-1);

  border-right: 1px solid currentColor;
}

div.callout {
  background-color: var(--clr-mantle);
  padding-block: 1rem;
  padding-left: 1.25rem;
}

